--- a/src/app/biology-section/interlab/interlab.component.html
+++ b/src/app/biology-section/interlab/interlab.component.html
@@ -1,8 +1,12 @@
 
-<img src="http://2018.igem.org/wiki/images/9/9b/T--GO_Paris-Saclay--interlabpage.png" alt="banner interlab" class="bannerimg">
+<div class="bannercontainer">
+  <img src="http://2018.igem.org/wiki/images/8/82/T--GO_Paris-Saclay--interlab_underbanner.png" class="bannerimg superposedbanner1">
+  <img src="http://2018.igem.org/wiki/images/9/90/T--GO_Paris-Saclay--empty-banner.png" class="bannerimg superposedbanner2">
+  <div class="headlinetext">Interlab</div>
+</div>
 
 
-<div class="grid-container">
+
   <mat-card class="dashboard-card largemargin" >
     <!-- Reference test<reference-box shorthand="Test2018"></reference-box>. A new test <reference-box shorthand="Example2018"></reference-box> -->
 
@@ -370,4 +374,4 @@
 
 
   </mat-card>
-</div>
+
