--- a/src/app/biology-section/parts/fol-c/fol-c.component.html
+++ b/src/app/biology-section/parts/fol-c/fol-c.component.html
@@ -1,8 +1,13 @@
-<div class="grid-container">
-  <h1 class="mat-h1">Part folC</h1>
-
-  <mat-card class="dashboard-card" >
-
-
-  </mat-card>
+<div class="bannercontainer">
+  <img src="http://2018.igem.org/wiki/images/d/dd/T--GO_Paris-Saclay--parts_underbanner.png" class="bannerimg superposedbanner1">
+  <img src="http://2018.igem.org/wiki/images/9/90/T--GO_Paris-Saclay--empty-banner.png" class="bannerimg superposedbanner2">
+  <div class="headlinetext">folC</div>
 </div>
+
+
+<mat-card class="dashboard-card largemargin" >
+
+  <p class="withlettrine">Placeholder text.</p>
+
+</mat-card>
+
