--- a/src/app/biology-section/parts/parts.component.html
+++ b/src/app/biology-section/parts/parts.component.html
@@ -7,8 +7,11 @@
 <mat-card class="dashboard-card">
 
   <h2>Methotrexate elimination</h2>
-
+  <div class="centerstuff semiwideimg">
+    <img src="http://2018.igem.org/wiki/images/3/38/T--GO_Paris-Saclay--folC_cpg2_pSB1C3.png" class="wideimg">
+  </div>
   <mat-card (mouseenter)='mouseenter($event)' (mouseleave)="mouseleave($event)" class="z-depth" class="part-card">
+
     <mat-card-header>
       <mat-card-title>Carboxypeptidase G2</mat-card-title>
       <mat-card-subtitle>cpg2 &mdash; BBa_K2688003</mat-card-subtitle>
